search date and icon changes
