# storage/api-docs/api-docs.json
@@ -19,59 +19,42 @@
         }
     ],
     "paths": {
-        "/articles/{id}": {
+        "/login": {
             "post": {
                 "tags": [
-                    "Test Form Fields"
+                    "Login"
                 ],
-                "summary": "Update article in DB",
-                "description": "Update article in DB",
-                "operationId": "update",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Id of Article",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "file",
-                        "in": "path",
-                        "description": "file of Article",
-                        "required": false,
-                        "schema": {
-                            "type": "file"
-                        }
-                    }
-                ],
+                "summary": "Sign in",
+                "description": "Login by email, password",
+                "operationId": "authLogin",
                 "requestBody": {
+                    "description": "Pass user credentials",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "title",
-                                    "content",
-                                    "status"
+                                    "email",
+                                    "password"
                                 ],
                                 "properties": {
-                                    "title": {
+                                    "email": {
                                         "type": "string",
-                                        "format": "string",
-                                        "example": "Test Article Title"
+                                        "format": "email",
+                                        "example": "user1@mail.com"
                                     },
-                                    "content": {
+                                    "password": {
                                         "type": "string",
-                                        "format": "string",
-                                        "example": "This is a description for kodementor"
+                                        "format": "password",
+                                        "example": "PassWord12345"
                                     },
-                                    "status": {
+                                    "fcm_token": {
                                         "type": "string",
-                                        "format": "string",
-                                        "example": "Published"
+                                        "example": ""
+                                    },
+                                    "app_type": {
+                                        "type": "string",
+                                        "example": "shop or parent"
                                     }
                                 },
                                 "type": "object"
@@ -81,23 +64,22 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "Successful operation",
                         "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status_code": {
-                                            "type": "integer",
-                                            "example": "200"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
+                            "application/json": {}
                         }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
                     }
                 },
                 "security": [
